# TrioCryptoBot

./: .env  LICENSE  README.md  bot.py  main.py  psycopg2.ipynb  pyproject.toml
lib/: app.py
