[tool.poetry]
name = "repl_python3_TrioCryptoBot"
version = "0.1.0"
description = ""
authors = ["melissaji1998 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
python-telegram-bot = "^13.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
